data/derived/sp14/progs/unify/prog3543.ml.out
Characters 161-162:
  if halff = 0 then Cosine(build(rand, depth-1)) 
             ^
Error: This expression has type int but an expression was expected of type
         int * int -> int
